<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_green"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">>

    <include
        android:id="@+id/header_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        >
    </include>

    <TextView
        android:id="@+id/lbl_insertValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/insira_os_valores"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/header_include">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_value01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_insertValues">


        <EditText
            android:id="@+id/text_value01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:hint="Digite aqui..."
            android:inputType="numberDecimal"
            android:minWidth="125dp"
            android:minHeight="60dp"
            android:textColor="@color/black_green"
            android:textColorHint="@color/black_green"
            android:textSize="20sp"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_value02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:minWidth="150dp"
        android:minHeight="80dp"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="14dp"
        app:layout_constraintStart_toEndOf="@id/card_value01"
        app:layout_constraintTop_toBottomOf="@id/lbl_insertValues">

        <EditText
            android:id="@+id/text_value02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:hint="Digite aqui..."
            android:inputType="numberDecimal"
            android:minWidth="125dp"
            android:minHeight="60dp"
            android:textColor="@color/black_green"
            android:textColorHint="@color/black_green"
            android:textSize="20sp"
            tools:ignore="Autofill,HardcodedText" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/background_operators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:contentDescription="Fundo Operadores"
        android:scaleType="matrix"
        android:src="@drawable/forma"
        app:layout_constraintTop_toBottomOf="@id/card_value02"
        tools:ignore="HardcodedText">

    </ImageView>

    <TextView
        android:id="@+id/lbl_operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/operadores"
        android:textColor="@color/black_green"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/background_operators"
        app:layout_constraintTop_toTopOf="@id/background_operators"

        >

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/conteiner_operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:minWidth="270dp"
        android:minHeight="190dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintStart_toStartOf="@id/background_operators"
        app:layout_constraintTop_toTopOf="@id/lbl_operators"
        android:background="@color/true_white"
        >


        <GridLayout
            android:layout_width="270dp"
            android:layout_height="190dp"
            android:columnCount="2"
            android:padding="8dp"
            android:rowCount="2"
            android:background="@color/true_white"
            >

            <!-- Primeiro botão (canto superior esquerdo) -->
            <Button
                android:id="@+id/btn_op_add"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/black_green"
                android:gravity="center_horizontal|top"
                android:text="@string/add"
                android:textColor="@color/light_green"
                android:textSize="40sp" />

            <!-- Segundo botão (canto superior direito) -->

            <!-- Terceiro botão (canto inferior esquerdo) -->
            <Button
                android:id="@+id/btn_op_mult"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/black_green"
                android:gravity="center_horizontal|top"
                android:text="@string/multiple"
                android:textColor="@color/light_green"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn_op_subt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/black_green"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/subt"
                android:textColor="@color/light_green"
                android:textSize="45sp" />

            <!-- Quarto botão (canto inferior direito) -->
            <Button
                android:id="@+id/btn_op_div"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:backgroundTint="@color/black_green"
                android:text="@string/div"
                android:textAlignment="center"
                android:textColor="@color/light_green"
                android:textSize="40sp" />

        </GridLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black_green"
        android:hint="Histórico"
        android:minWidth="270dp"
        android:minHeight="70dp"
        android:textColorHint="@color/white"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="@id/background_operators"
        app:layout_constraintTop_toBottomOf="@id/conteiner_operators">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
